--- a/flower.html
+++ b/flower.html
@@ -11,6 +11,7 @@
 <body class="container">
   <!-- Pembuat code: https://codepen.io/mdusmanansari/pen/BamepLe -->
     <div class="night"></div>
+    <div class="falling-stars"></div>
     <div class="flowers">
       <div class="flower flower--1">
         <div class="flower__leafs flower__leafs--1">
@@ -308,5 +309,8 @@
       </div>
     </div>
     <script src="main.js"></script>
-  </body>
+  <body>
+    <div class="falling-stars"></div>
+    <script src="script.js"></script>
+</body>
 </html>
